--- a/bet.html
+++ b/bet.html
@@ -41,6 +41,19 @@
     </script>
 
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">ETH Deadpool</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link " href="/">Home</a>
+          <a class="nav-item nav-link active" href="/bet">Play</a>
+          <a class="nav-item nav-link" href="/leaderboard">Leaderboard</a>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div class="row justify-content-md-center my-2" >
         <H1>
@@ -94,15 +107,9 @@
           </div>
         </div>
       </div>
-
-      <div class="row justify-content-md-center my-2">
-          <h4 id="count">0</h4>
-          <h4>&nbsp;Bets</h4>
-      </div>
-
        <div class="row justify-content-md-center my-2">
           <div id="history">
-            <h4>Your Bets :</h4>
+            <h4>Your Bets <span id="count">0</span>:</h4>
           </div>
       </div>
 
@@ -154,7 +161,7 @@
         if (guess != ""){
           bet_history.push(guess);
           bet_timestamp.push(parseInt(Date.parse(guess)/1000));
-          history_html = "<h4 style='text-align:center' >Your Bets :</h4>";
+          history_html = "<h4 style='text-align:center' >Your Bets <span id=\"count\">0</span>:</h4>";
           for (var i = 0; i < bet_history.length; i++){
               history_html += "<h5 style='text-align:center'>" + bet_history[i] + "</h5>";
           }
