add rules links

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -29,6 +29,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link " href="/">Home</a>
+          <a class="nav-item nav-link " href="/rules">Rules</a>
           <a class="nav-item nav-link " href="/bet">Play</a>
           <a class="nav-item nav-link active" href="/leaderboard">Leaderboard</a>
         </div>
