--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="/bet">Play</a>
+          <a class="nav-item nav-link " href="/rules">Rules</a>
           <a class="nav-item nav-link" href="/leaderboard">Leaderboard</a>
         </div>
       </div>
