--- a/leaderboard.html
+++ b/leaderboard.html
@@ -87,7 +87,40 @@
         <h3> Leaderboard </h3>
       </div>
       <hr>
-      <div class="row justify-content-md-center my-2">
+
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Bets</th>
+            <th scope="col">Address</th>
+            <th scope="col">Current Reward</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td id='bets_1'></td>
+            <td id=leader></td>
+            <td id='prize'></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td id='bets_2'></td>
+            <td id='leader_2'></td>
+            <td id='prize_2'></td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td id='bets_3'></td>
+            <td id='leader_3'></td>
+            <td id='prize_3'></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <!-- <div class="row justify-content-md-center my-2">
         <h5>#1 (<span id='prize'></span> ETH) <span id='bets_1'></span> bets <h5>
       </div>
       <div class="row justify-content-md-center my-2">
@@ -106,7 +139,7 @@
     </div>
     <div class="row justify-content-md-center my-2">
      <p id="leader_3"></p>
-   </div>
+    </div> -->
 
     <script>
       // MetaMask injects the web3 library for us.
