--- a/rules.html
+++ b/rules.html
@@ -15,6 +15,17 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io.connect();
+      socket.on('ref', function(message) {
+        var form_get = document.getElementsByClassName('ref');
+        for(var i = 0; i < form_get.length; i++) {
+          form_get[i].value = message.referral;
+        }
+        document.getElementById('brand_ref').href = "/?ref=" + message.referral;    
+        document.getElementById('rules_ref').href = "/rules?ref=" + message.referral;
+        document.getElementById('home_ref').href = "/?ref=" + message.referral;
+        document.getElementById('bet_ref').href = "/bet?ref=" + message.referral;
+        document.getElementById('leaderboard_ref').href = "/leaderboard?ref=" + message.referral;
+      });
       socket.on('data', function(message) {
         $('#prize').text("Reward Pool : " + message.reward + " Ethers");
         $('#players').text(message.players + " Players, " + message.bets + " Bets");
@@ -43,16 +54,16 @@
     </script>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">ETH Deadpool</a>
+      <a id="brand_ref" class="navbar-brand" href="/">ETH Deadpool</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link " href="/">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link active" href="#">Rules</a>
-          <a class="nav-item nav-link" href="/bet">Play</a>
-          <a class="nav-item nav-link" href="/leaderboard">Leaderboard</a>
+          <a id='home_ref' class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a id='rules_ref' class="nav-item nav-link " href="/rules">Rules</a>
+          <a id='bet_ref' class="nav-item nav-link" href="/bet">Play</a>
+          <a id='leaderboard_ref' class="nav-item nav-link" href="/leaderboard">Leaderboard</a>
         </div>
       </div>
     </nav>
@@ -62,8 +73,10 @@
         <H1>
           The Ethereum Deadpool - Donald Trump
         </H1>
-        <div id="meta-mask-required"></div>
       </div>
+
+      <div class="row justify-content-md-center my-2" id="meta-mask-required"></div>
+      <div class="row justify-content-md-center my-2" id="login-required"></div>
 
       <div class="row justify-content-md-center my-2">
         <img src="https://cdn.steemitimages.com/DQma2t28aGMBqRxbxz5FnJqJmrMQUJEB8mSqPAZEDpEr4r1/image.png" height="40%"></img>
@@ -92,10 +105,9 @@
         </div>
       </div>
 
-
-
       <div class="row justify-content-md-center my-2">
         <form action="/bet" method="get">
+          <input hidden name="ref" class="ref" value="0x12345" >
           <button type='submit' class="btn btn-outline-secondary">Get Started</button>
         </form>
       </div>
@@ -135,6 +147,9 @@
       window.onload = function() {
         if (typeof web3 === 'undefined') {
           document.getElementById('meta-mask-required').innerHTML = 'You need <a href="https://metamask.io/">MetaMask</a> browser plugin to play'
+        }
+        if(web3.eth.coinbase==null){
+          document.getElementById('login-required').innerHTML = 'You need to login into MetaMask !';
         }
       };
       function go(){
