domain name update

--- a/bet.html
+++ b/bet.html
@@ -157,7 +157,7 @@
             </button>
           </div>
           <div class="modal-body">
-            http://ourdomainname/?ref=<span id="ref_link"></span>
+            http://ethdeadpool.com:8080/?ref=<span id="ref_link"></span>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
