--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
           The Ethereum Deadpool - Donald Trump
         </H1>
       </div>
-      
+
       <div class="row justify-content-md-center my-2" id="meta-mask-required"></div>
       <div class="row justify-content-md-center my-2" id="login-required"></div>
 
       <div class="row justify-content-md-center my-2">
-        <img src="https://cdn.steemitimages.com/DQma2t28aGMBqRxbxz5FnJqJmrMQUJEB8mSqPAZEDpEr4r1/image.png" height="40%"></img>
+        <img src="https://cdn.steemitimages.com/DQma2t28aGMBqRxbxz5FnJqJmrMQUJEB8mSqPAZEDpEr4r1/image.png" height="36%" weight="36%"></img>
       </div>
       <div class="row justify-content-md-center my-2">
         <blockquote class="blockquote">
@@ -101,20 +101,21 @@
       </div>
 
       <div class="row justify-content-md-center my-2">
-        <p> Average Prediction Countdown: </p>
-        <span id="estTimestamp">0 years 0 days, 00 hours 00 minutes 00 seconds </span>
+        <H4> Average Prediction Countdown:
+          <span id="estTimestamp">0 years 0 days, 00 hours 00 minutes 00 seconds </span>
+        </H4> 
       </div>
 
       <div class="row justify-content-md-center my-2">
-        <H3 id="prize">
+        <H4 id="prize">
           Reward Pool : 0 Ethers
-        </H3>
+        </H4>
       </div>
 
       <div class="row justify-content-md-center">
-        <H4 id="players">
+        <H5 id="players">
           0 Players, 0 Bets
-        </H4>
+        </H5>
       </div>
 
       <div class="row justify-content-md-center my-2">
