--- a/bet.html
+++ b/bet.html
@@ -73,7 +73,7 @@
       <div class="row justify-content-md-center my-2" id="login-required"></div>
 
       <div class="row justify-content-md-center my-2">
-        <img src="https://cdn.steemitimages.com/DQma2t28aGMBqRxbxz5FnJqJmrMQUJEB8mSqPAZEDpEr4r1/image.png" height="40%"></img>
+        <img src="https://cdn.steemitimages.com/DQma2t28aGMBqRxbxz5FnJqJmrMQUJEB8mSqPAZEDpEr4r1/image.png" height="36%" weight="36%"></img>
       </div>
       <div class="row justify-content-md-center my-2">
         <blockquote class="blockquote">
