--- a/bet.html
+++ b/bet.html
@@ -56,9 +56,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-			<a id='home_ref' class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+			<a id='home_ref' class="nav-item nav-link " href="#">Home <span class="sr-only">(current)</span></a>
       		<a id='rules_ref' class="nav-item nav-link " href="/rules">Rules</a>
-          	<a id='bet_ref' class="nav-item nav-link" href="/bet">Play</a>
+          	<a id='bet_ref' class="nav-item nav-link active" href="/bet">Play</a>
           	<a id='leaderboard_ref' class="nav-item nav-link" href="/leaderboard">Leaderboard</a>        </div>
       </div>
     </nav>
