--- a/rules.html
+++ b/rules.html
@@ -20,7 +20,7 @@
         for(var i = 0; i < form_get.length; i++) {
           form_get[i].value = message.referral;
         }
-        document.getElementById('brand_ref').href = "/?ref=" + message.referral;    
+        document.getElementById('brand_ref').href = "/?ref=" + message.referral;
         document.getElementById('rules_ref').href = "/rules?ref=" + message.referral;
         document.getElementById('home_ref').href = "/?ref=" + message.referral;
         document.getElementById('bet_ref').href = "/bet?ref=" + message.referral;
@@ -60,8 +60,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a id='home_ref' class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a id='rules_ref' class="nav-item nav-link " href="/rules">Rules</a>
+          <a id='home_ref' class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a id='rules_ref' class="nav-item nav-link active" href="/rules">Rules</a>
           <a id='bet_ref' class="nav-item nav-link" href="/bet">Play</a>
           <a id='leaderboard_ref' class="nav-item nav-link" href="/leaderboard">Leaderboard</a>
         </div>
